# murko

./: .gitignore  Dockerfile  Dockerfile-training  README.md  candidates.py  client.py  config.py  convert_labelme_json_to_masks.py  dataset_loader.py  deleteme.txt  docker-compose.yml  generate_masks.py  keypoints.py  models.py  murko.py  objects_of_interest.py  predict.py  predict_server.py  predictor.py  pyproject.toml  redis_client.py  regionprops.py  requirements.txt  sample.py  segmentation.py  server.py  show_annotations.py  test.py  train.py  utils.py
examples/: image_default_model_img_size_256x320.npy
legacy/: convert_labelme_json_to_masks.py  dataset_loader.py  show_annotations.py_bup  show_annotations_bup2.py
results/: fcdn103_murko_ada.history  fcdn103_murko_ada_identity_hierarchy.history  fcdn103_murko_ada_identity_hierarchy_74.history
soleil_proxima_dataset/: 100161_Fri_Jul_12_21:33:25_2019_double_click_zoom_5_y_573_x_682.json  100161_Wed_Feb__6_202122_2019_manual_omega_210.00_zoom_9_y_486_x_670.json  100161_Wed_Jul_10_21:09:10_2019_double_click_zoom_2_y_529_x_606.json  100161_Wed_Jul_21_081341_2021_color_zoom_10_298.72.json  README.md  autocenter_100161_Mon_Jul_27_20:53:57_2020_bright_failed.json  autocenter_100161_Tue_Nov_23_10:35:03_2021_bright_failed.json  autocenter_100161_Wed_Jan_27_12:21:02_2021_bright_failed.json  double_clicks_100161_Fri_Jul_12_213325_2019_double_click_zoom_5_y_573_x_682.json  double_clicks_100161_Wed_Jul_10_210910_2019_double_click_zoom_2_y_529_x_606.json
